syntax = "proto3";
package ColmnarDB.NetworkClient.Message;
import "messages/CSVImportMessage.proto";


message BulkImportMessage {
    string TableName = 1;
    string ColumnName = 2;
    DataType ColumnType = 3;
    int32 ElemCount = 4;
}